# mpicart

./: CMakeLists.txt  Makefile  README.md  mpicart.doxy  todo.txt
src/: CMakeLists.txt  CartSplitter.cpp  CartSplitter.hpp  DistributedDescription.hpp  logger.cpp  logger.hpp  mpi_info.hpp  safecheck.hpp  vector_helper.hpp
testsrc/: 2d_halo_scatter.cpp  CMakeLists.txt  mpicart.cpp  parsing_helpers.hpp  print_helpers.hpp  test_helpers.hpp
